﻿0.1 by L0RE
- Initial release
...

[B]Version 0.40  (16.09.2018)[/B] by realvito
- fixed: In der Rubrik "LIVE" werden nicht alle Spiele gelistet
- fixed: Die Auswahlfunktion in der Rubrik "Highlights" ist fehlerhaft und es werden nicht alle Ergebnisse angezeigt
- fixed: In der Rubrik "Topclips" werden nur Fehler produziert
- fixed: Scriptfehler bereinigt
- added: Rubriken = Ligen mit Auswahlfunktion, Archiv mit Auswahlfunktion, Übersicht - Highlights, Übersicht - Aufzeichnungen
- optimized: Icon aktualisiert und Fanart hinzugefügt

[B]Version 0.5.0  (11.11.2018)[/B] by realvito
- optimized: In der Rubrik = LIVE andere Sportarten hinzugefügt (Volleyball, Eishockey, Basketball ...)
- added: Rubrik = Alle Sportarten mit Topclips und Wiederholungen aus versch. Sportbereichen (Volleyball, Eishockey, Basketball ...)

[B]Version 1.0.1  (30.12.2018)[/B] by realvito
- fixed: Addon an die Webseiten-Veränderungen von "https://www.sporttotal.tv/" angepasst und komplett umgeschrieben
- added: Hauptrubriken = Live-Übertragungen, Sportarten, Ligen und AMATor