@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.sporttotal" name="Sport-Total TV" version="1.0.1" provider-name="L0RE">
+<addon id="plugin.video.sporttotal" name="Sport-Total TV" version="1.0.2" provider-name="L0RE">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 		<import addon="script.module.beautifulsoup4" version="4.3.2"/>
@@ -26,9 +26,11 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 1.0.1  (30.12.2018)[/COLOR][/B][CR]by realvito[CR]
-- fixed: Addon an die Webseiten-Veränderungen von "https://www.sporttotal.tv/" angepasst und komplett umgeschrieben
-- added: Hauptrubriken = Live-Übertragungen, Sportarten, Ligen und AMATor
+		<news>[B][COLOR orangered]Version 1.0.2  (16.05.2019)[/COLOR][/B] by realvito[CR]
+- fixed: In der Rubrik = Live-Übertragungen werden die verfügbaren Sportarten als kryptischer Text ausgegeben
+- fixed: In der Rubrik = Sportarten werden NICHT alle verfügbaren Sportarten gelistet und Links NICHT richtig weitergereicht
+- fixed: In der Rubrik = Ligen werden die verfügbaren Sportarten als kryptischer Text ausgegeben und Links NICHT richtig weitergereicht
+- fixed: Videos werden NICHT abgespielt (Link verändert)
 		</news>
 	</extension>
 </addon>
