@@ -10,5 +10,8 @@
 		<setting type="sep"/>
 		<setting label="30112" type="action" action="RunPlugin(plugin://plugin.video.sporttotal/?mode=clearCache)" visible="true"/>
 		<setting type="sep"/>
+		<setting label="30232" type="lsep"/>
+		<setting label="30113" type="bool" id="show_settings" default="true"/>
+		<setting type="sep"/>
 	</category>
 </settings>
